<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <TextView
        android:id="@+id/user_state_title"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state" />

    <LinearLayout
        android:id="@+id/state_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_state"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            tools:text="Learning kotlin" />

        <ImageButton
            android:id="@+id/user_state_edit_action"
            style="@style/PagerActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit"
            android:src="@drawable/ic_edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/state_save_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/user_state_edit"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/state_update"
            android:inputType="textImeMultiLine"
            tools:text="Learning kotlin" />

        <ImageView
            android:id="@+id/user_state_cancel_action"
            style="@style/PagerActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_cancel" />

        <ImageView
            android:id="@+id/user_state_apply_action"
            style="@style/PagerActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/apply"
            android:src="@drawable/ic_apply" />
    </LinearLayout>
</LinearLayout>