<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/view_loading"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/team_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.TeamActivity" />
</FrameLayout>